--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Web đầu tiên</title>
+<meta charset="UTF-8">
+<title>Đăng nhập</title>
+
+<style>
+body{
+    background:#f0f2f5;
+    font-family:Arial;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
+}
+
+.box{
+    background:white;
+    width:350px;
+    padding:30px;
+    border-radius:10px;
+    box-shadow:0 0 20px rgba(0,0,0,0.2);
+    text-align:center;
+}
+
+h2{
+    margin-bottom:20px;
+}
+
+input{
+    width:100%;
+    padding:10px;
+    margin:8px 0;
+    border:1px solid #ccc;
+    border-radius:5px;
+}
+
+button{
+    width:100%;
+    padding:10px;
+    background:#1877f2;
+    color:white;
+    border:none;
+    border-radius:5px;
+    font-size:16px;
+    cursor:pointer;
+}
+
+button:hover{
+    background:#145dbf;
+}
+
+#message{
+    margin-top:10px;
+    color:red;
+}
+</style>
 </head>
+
 <body>
-    <h1>Xin chào!</h1>
-    <p>Mình đang học code web 😄</p>
+
+<div class="box">
+<h2>Đăng nhập</h2>
+
+<input type="text" id="username" placeholder="Tên đăng nhập">
+<input type="password" id="password" placeholder="Mật khẩu">
+
+<button onclick="login()">Đăng nhập</button>
+
+<p id="message"></p>
+</div>
+
+<script>
+function login(){
+    var user=document.getElementById("username").value;
+    var pass=document.getElementById("password").value;
+
+    if(user==="admin" && pass==="123456"){
+        document.getElementById("message").style.color="green";
+        document.getElementById("message").innerHTML="Đăng nhập thành công 🎉";
+    }else{
+        document.getElementById("message").innerHTML="Sai tài khoản hoặc mật khẩu ❌";
+    }
+}
+</script>
+
 </body>
 </html>
