--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@ function login(){
     if(user !== "" && pass !== ""){
         window.location.href="home.html";
     }else{
-        document.getElementById("message").innerHTML="Nhập gì đó đi má 😆";
+        document.getElementById("message").innerHTML="Nhập gì đó đi má ";
     }
 }
 </script>
 
 </body>
 </html>
+
